fixed header jumping when started editing atom

--- a/resources/styles/_variables.scss
+++ b/resources/styles/_variables.scss
@@ -17,7 +17,7 @@ $h6-font-size: $base-font-size;
 
 // Line height
 $base-line-height: 1.5;
-$header-line-height: 1.25;
+$header-line-height: 1.5;
 
 // Other Sizes
 $base-border-radius: 3px;
